# starclass

./: .gitignore  pyproject.toml
starclass/: star.ipynb
