[tool.poetry]
name = "starclass"
version = "0.1.0"
description = ""
authors = ["ComfyFluffy <24245520+ComfyFluffy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astropy = "^6.0.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
